package org.example.error;

/**
 * Generic application exception used to wrap errors in the application.
 */
public class AppException extends Exception {

    public AppException(String message) {
        super(message);
    }

    public AppException(String message, Throwable cause) {
        super(message, cause);
    }
}
